src/objects/inscor__Contract_Line__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Aircraft_Register__c</fullName>
        <label>Aircraft Register</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__CSN_at_Installation__c</fullName>
        <label>CSN at Installation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__CSN_at_Removal__c</fullName>
        <label>CSN at Removal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Charges_Markup_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charges Markup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Charges_Markup__c</fullName>
        <label>Charges Markup %</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Contract_Quantity__c</fullName>
        <label>Contract Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Date_of_Engine_Installation__c</fullName>
        <label>Date of Engine Installation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Date_of_Removal__c</fullName>
        <label>Date of Removal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__ECSN_at_Installation__c</fullName>
        <label>ECSN at Installation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__ECSN_at_Removal__c</fullName>
        <label>ECSN at Removal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__ETSN_at_Installation__c</fullName>
        <label>ETSN at Installation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__ETSN_at_Removal__c</fullName>
        <label>ETSN at Removal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Engine_Position__c</fullName>
        <label>Engine Position</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Flat_Rate__c</fullName>
        <label>Flat Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Markup_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labor Markup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Labor_Markup__c</fullName>
        <label>Labor Markup %</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Parts_Markup_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parts Markup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Parts_Markup__c</fullName>
        <label>Parts Markup %</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Pricing_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Template</label>
        <referenceTo>inscor__Pricing_Template__c</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Removal_Reason__c</fullName>
        <label>Removal Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Skill_Rate__c</fullName>
        <label>Skill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>inscor__Skill__c</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__TSN_at_Installation__c</fullName>
        <label>TSN at Installation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__TSN_at_Removal__c</fullName>
        <label>TSN at Removal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Skills</fullName>
                </value>
                <value>
                    <fullName>Pricing template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Line</label>
    <nameField>
        <displayFormat>CL-{0}</displayFormat>
        <label>Contract Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Qty_cannot_more_then_Inv_qty_available</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Contract_Quantity__c &gt;  inscor__Inventory__r.inscor__Quantity_Available__c</errorConditionFormula>
        <errorMessage>Contract Quantity can not greater than Quantity Available of Inventory</errorMessage>
    </validationRules>
</CustomObject>